--- a/style.css
+++ b/style.css
@@ -62,7 +62,7 @@ body {
 .hero-image .container {
   padding-left: 0;
   padding-right: 0;
-  background-image: url("../img/dotted-border-v.svg");
+  background-image: url("img/dotted-border-v.svg");
   background-repeat: repeat-y;
   background-position: top left;
 }
